Made menu dropdown a bit wider to prevent wrapping

--- a/src/css/dropdownMenu.css
+++ b/src/css/dropdownMenu.css
@@ -20,9 +20,8 @@
     display: none;
     position: absolute;
     background-color: #353535;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px #1a1a1a;
-	z-index:-1;
+    min-width: 200px;
+	box-shadow: 0px 8px 16px 0px #1a1a1a;
 }
 
 /* Links inside the dropdown */
